# lab

./: .envrc.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  .release-please-manifest.json  AGENTS.md  CLAUDE.md  PLAN.md  README.md  Tiltfile  artifacthub-repo.yml  biome.json  buf.gen.yaml  buf.temporal.gen.yaml  buf.yaml  bunfig.toml  conductor.json  flake.nix  go.mod  go.sum  go.work  go.work.sum  iteration-1.md  iteration-2.md  iteration-3.md  iteration-4.md  iteration-5.md  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr-description.md  release-please-config.json  tsconfig.base.json  turbo.json
services/torghut/: .dockerignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.alpha.json  pyrightconfig.alpha.strict.json  pyrightconfig.json  pyrightconfig.scripts.json  pyrightconfig.scripts.strict.json
services/torghut-forwarder/: Dockerfile  README.md  pyproject.toml
services/torghut-forwarder/tests/: test_dedup.py  test_envelope.py  test_keys.py
services/torghut-forwarder/torghut_forwarder/: app.py  config.py  dedup.py  envelope.py  health.py  logger.py  metrics.py
services/torghut/app/: __init__.py  alpaca_client.py  bootstrap.py  clickhouse.py  config.py  config.pyi  db.py  forecast_service.py  lean_runner.py  logging_config.py  main.py  metrics.py  metrics.pyi  scheduler_main.py  snapshots.py
services/torghut/artifacts/: iteration-1.md  iteration-2.md  iteration-3.md  iteration-4.md  iteration-5.md
services/torghut/config/: autonomous-gate-policy.json  autonomous-pipeline-dag.yaml  autonomous-strategy-intraday-tsmom-sample.yaml  autonomous-strategy-sample.yaml  autonomy-gates-v3.json  economic-policy-v1.json  evaluation-gates.json  forecast-router-policy-v1.json
services/torghut/migrations/: README.md  env.py
services/torghut/notebooks/: 00-system-flow.ipynb  10-strategy-lifecycle.ipynb  20-execution-evidence.ipynb  30-capital-authority.ipynb  40-transformer-math-from-first-principles.ipynb  README.md  mlx-autoresearch-diagnostics.ipynb  strategy-autoresearch-loop.ipynb
services/torghut/requirements/: rapids-wsl2-cu13.txt
services/torghut/scripts/: __init__.py  analyze_historical_simulation.py  analyze_historical_simulation.pyi  archive_recent_kafka_trading_days.py  assemble_production_readiness_bundle.py  assemble_runtime_ledger_proof_packet.py  assemble_runtime_ledger_proof_packet.pyi  audit_hpairs_signal_liveness.py  audit_hpairs_signal_liveness.pyi  audit_hpairs_source_proof_census.py  audit_hpairs_source_proof_census.pyi  audit_tigerbeetle_runtime_ledger_parity.py  backfill_tigerbeetle_stable_refs.py  backfill_vnext_empirical_jobs.py  backfill_whitepaper_semantic_index.py  backtest_tsmom_stooq.py  bootstrap_rapids_wsl2.sh  build_dspy_dataset.py  build_empirical_promotion_manifest.py  build_historical_profitability_proof.py  build_historical_profitability_proof.pyi  build_replay_runtime_window_plan.py  build_revenue_repair_digest.py  check_diff_coverage.py  check_migration_graph.py  check_rapids_wsl2_runtime.py  check_refactor_quality.py  compile_dspy_program.py  compile_whitepaper_claims.py  evaluate_dspy_compile.py  flatten_paper_account_positions.py  flatten_paper_account_positions.pyi  generate_diagnostics_notebooks.py  generate_historical_profitability_manifests.py  historical_simulation_verification.py  historical_simulation_verification.pyi  import_hypothesis_runtime_windows.py  import_hypothesis_runtime_windows.pyi  inspect_hpairs_runtime_evidence.py  journal_tigerbeetle_order_events.py  (+75 more)
services/torghut/tests/: __init__.py  broker_mutation_recovery_test_support.py  broker_mutation_test_support.py  conftest.py  hypothesis_profiles.py  migration_testing.py  profitability_archive_test_utils.py  test_adaptive_market_limit_allocation_stress.py  test_adaptive_signal_falsification_stress.py  test_alpaca_client.py  test_alpaca_mutation_recovery.py  test_alpaca_reduction_ambiguity.py  test_alpaca_reduction_client.py  test_alpaca_reduction_coordinator.py  test_alpaca_reduction_preflight.py  test_alpaca_strict_order_lookup.py  test_alpaca_submit_recovery.py  test_alpha_closure_dividend_slo.py  test_alpha_decay_predictability_stress.py  (+354 more)
(+9314 files in other folders)
