[project]
name = "torghut-forwarder"
version = "0.1.0"
description = "Alpaca WebSocket forwarder that envelopes market data into Kafka topics for torghut"
authors = [{ name = "Proompt Engineering" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "alpaca-py>=0.19.0",
  "aiokafka>=0.10.0",
  "pydantic-settings>=2.2",
  "prometheus-client>=0.20.0",
  "structlog>=24.1.0",
  "tenacity>=8.2.3",
  "aiohttp>=3.9.5",
  "orjson>=3.10.5",
  "uvloop>=0.21.0; platform_system != 'Windows'",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.7",
]

[tool.hatch.build.targets.wheel]
packages = ["torghut_forwarder"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.7",
  "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
