[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "torghut"
version = "0.1.0"
description = "Torghut FastAPI service for autonomous Alpaca paper trading via Codex."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0,<1.0",
  "uvicorn[standard]>=0.32.0,<1.0",
  "pydantic>=2.9.0,<3.0",
  "pydantic-settings>=2.6.0,<3.0",
  "sqlalchemy>=2.0.36,<3.0",
  "psycopg[binary]>=3.2.1,<4.0",
  "alpaca-py>=0.33.0,<1.0",
  "pandas>=2.2.3,<3.0",
  "numpy>=2.1.2,<3.0",
  "openai>=1.55.3,<2.0",
  "dspy-ai>=2.6.27,<3.0",
  "kafka-python>=2.2.0,<3.0",
  "lz4>=4.3.3,<5.0",
  "alembic>=1.13.2,<2.0",
  "pyyaml>=6.0.2,<7.0",
  "inngest>=0.5.15,<1.0",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.10.0,<8.0",
  "crosshair-tool>=0.0.95,<1.0",
  "hypothesis>=6.151.0,<7.0",
  "mutmut>=3.3.1,<4.0",
  "pyright>=1.1.389,<2.0",
  "pytest>=8.4.0,<9.0",
  "pytest-cov>=7.0.0,<8.0",
  "ruff>=0.9.0,<1.0",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]
markers = [
  "property: property-based tests backed by Hypothesis",
  "stateful: state-machine or sequence-based tests",
  "slow: longer-running checks reserved for selective execution",
  "mutation: mutation-testing focused suites or helpers",
]

[tool.coverage.run]
branch = true
source = ["app", "scripts"]
omit = ["tests/*", "migrations/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = false
precision = 2
exclude_also = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.vulture]
paths = ["app", "scripts"]
exclude = ["*/tests/*", "*/.venv/*", "*/migrations/*"]
min_confidence = 100
sort_by_size = true

[tool.mutmut]
paths_to_mutate = [
  "app/trading/quantity_rules.py",
  "app/trading/features.py",
  "app/trading/quote_quality.py",
  "app/trading/session_context.py",
]
pytest_add_cli_args_test_selection = [
  "tests/property",
  "tests/stateful",
  "tests/test_feature_contract_v3.py",
  "tests/test_local_intraday_tsmom_replay.py",
  "tests/test_portfolio_sizing.py",
  "tests/test_quote_quality.py",
  "tests/test_session_context.py",
]
mutate_only_covered_lines = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
